HVAC Backup 2/objects/City_Tier__c(1).object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Non Metro</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Semi urban</fullName>
                </value>
                <value>
                    <fullName>Class A</fullName>
                </value>
                <value>
                    <fullName>Class B</fullName>
                </value>
                <value>
                    <fullName>Class C</fullName>
                </value>
                <value>
                    <fullName>J&amp;K / Northeast</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                    <isActive>false</isActive>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <isActive>false</isActive>
                    <label>B</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <isActive>false</isActive>
                    <label>C</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>City Tier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Pincode__c</columns>
        <columns>Tier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>City Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>